tests/parsing/smtlib/poly/errors/085_define-sort_bad_arg_list_1.psmt2
(set-logic ALL)
(define-sort foo _)
